; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c_enable_smi_window.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c_enable_smi_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }
%struct.vcpu_svm = type { i32 }

@INTERCEPT_STGI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm_vcpu*)* @enable_smi_window to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enable_smi_window(%struct.kvm_vcpu* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.kvm_vcpu*, align 8
  %4 = alloca %struct.vcpu_svm*, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %3, align 8
  %5 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %6 = call %struct.vcpu_svm* @to_svm(%struct.kvm_vcpu* %5)
  store %struct.vcpu_svm* %6, %struct.vcpu_svm** %4, align 8
  %7 = load %struct.vcpu_svm*, %struct.vcpu_svm** %4, align 8
  %8 = call i32 @gif_set(%struct.vcpu_svm* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %19, label %10

10:                                               ; preds = %1
  %11 = load %struct.vcpu_svm*, %struct.vcpu_svm** %4, align 8
  %12 = call i64 @vgif_enabled(%struct.vcpu_svm* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = load %struct.vcpu_svm*, %struct.vcpu_svm** %4, align 8
  %16 = load i32, i32* @INTERCEPT_STGI, align 4
  %17 = call i32 @set_intercept(%struct.vcpu_svm* %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %10
  store i32 1, i32* %2, align 4
  br label %20

19:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %19, %18
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local %struct.vcpu_svm* @to_svm(%struct.kvm_vcpu*) #1

declare dso_local i32 @gif_set(%struct.vcpu_svm*) #1

declare dso_local i64 @vgif_enabled(%struct.vcpu_svm*) #1

declare dso_local i32 @set_intercept(%struct.vcpu_svm*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
